Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
      - name: scaletestapp
        image: ghcr.io/yandex-practicum/scaletestapp:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "15Mi"
            cpu: "100m"
          limits:
            memory: "30Mi"
            cpu: "200m"
