Task2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp-service
spec:
  selector:
    app: scaletestapp
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
