Task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scaletestapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: scaletestapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scaletestapp-service
                port:
                  number: 8080
